# invoice-generator

./: Cargo.toml
data/: sample.json
src/: main.rs
src/invoice_data/: invoice_data.rs  invoice_item.rs  mod.rs  party.rs  vat_rate.rs
src/renderer/: mod.rs  renderer.rs
templates/: layout.hbs
