[package]
name = "invoice-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
handlebars = "4.3.3"
rust_decimal = "1.25.0"
rust_decimal_macros = "1.25.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
